--- a/CSS/CSS.css
+++ b/CSS/CSS.css
@@ -115,7 +115,163 @@ background {
                                         space：圖片在水平和垂直重複出現時會自動調整間距，讓圖片完整呈現
                                         sound：圖片在水平和垂直重複出現時會自行調整大小，讓圖片完整呈現 */
 
+    background-position: center;    /* 可以將圖片放在指定位置，而不是一律放在左上角 
+                                       value值可以是下列幾類
+                                       left top、left center、left bottom、right top、right center、right center、right bottom
+                                       center top、center center、center bottom
+                                       如果設定一個值，另一個一定是center
+                                       x% y%
+                                       百分比方式設置，第一個是水平位置，第二個是垂直位置，左上是0%0%，右下角是100%100%，
+                                       如果只設定一個值，另一個值一定是50% 
+                                       xpos ypos
+                                       第一個值是水平位置，第二個值是垂直位置，ex像素px，如果只設定一個值，另一個值是50%
+                                       ，可混用%c和position值 */
+
+    background-size: auto;          /* 背景圖片大小
+                                    auto：這是預設選項，背景圖依本身的寬高顯示，若是背景空間不夠，則只能顯示部分圖像
+                                    length：設置圖片得寬度和高度，第一個值是寬度，第二個值是高度。如果只設一個值另一個就是auto
+                                    percentage：以父元素的百分比來設置圖片的寬度和高度，同length敘述
+                                    cover：可能造成部分圖像不再背景區
+                                    contain：圖像會依背景大小自行調整覆蓋整個背景區 */
+
+    background-attachment: scroll;  /* 背景圖片是否隨內容捲動，scroll：這是預設 fixed：背景圖不會隨頁面捲動 
+                                            local：一般使用與scroll相同，但在inframe顯示時，背景圖則不捲動 */
+    
+    background-clip: border-box;    /* 設定背景圖片的顯示區域，待 */
+    
+    background-origin: border-box;  /* 設定背景圖片顯示的基準點，待 */
+                                            
+    background: none;               /* 背景簡易表示法
+                                    可以設定下列屬性值 
+                                    background-color background-image background-position background-size
+                                    background-repeat background-attachment background-origin background-clip */
 }
+
+/* Margin外邊距 */
+Margin {
+
+    margin-top: 20px;       /* 上外邊距 */
+
+    margin-right: 30px;     /* 右外邊距 */
+
+    margin-bottom: 40px;    /* 下外邊距 */
+
+    margin-left: 50px;      /* 左外邊距 */
+
+    margin: 20px 30px 40px 50px;           /* 上述4種的簡易表示法，使用時是順時針top、right、bottom、left */
+
+}
+
+/* padding內邊距 */
+padding {
+
+    padding-top: 5px;       /* 上內邊距 */
+
+    padding-right: 10px;    /* 右內邊距 */
+
+    padding-bottom: 15px;   /* 下內邊距 */
+
+    padding-left: 20px;     /* 左內邊距 */
+
+    padding: 5px 10px 15px 20px;    /* 上述4種的簡易表示法，使用時是順時針top、right、bottom、left */
+
+}
+
+/* Border邊框 */
+Border {
+
+    border-top-style: none;     /* 上框線樣式 */
+
+    border-right-style: none;   /* 右框線樣式 */
+
+    border-bottom-style: none;  /* 下框線樣式 */
+
+    border-left-style: none;    /* 左框線樣式 */
+
+    border-style: none;         /* 上述4種的簡易表示法，使用時是順時針上右下左 */
+
+    /* border-style的值可以設
+        none：無邊框
+        dotted：點框線
+        dashed：虛框線
+        solid：實線框線，寬度由border-width決定
+        groove：3D內凹框線，效果需由border-color決定
+        ridge：3D外凸框線，效果需由border-color決定
+        inset：內凹框線，效果需由border-color決定
+        outset：外凹框線，效果需由border-color決定
+    */
+
+    border-top-color: none;     /* 上框線色彩 */
+
+    border-right-color: none;   /* 右框線色彩 */
+
+    border-bottom-color: none;  /* 下框線色彩 */
+
+    border-left-color: none;    /* 左框線色彩 */
+
+    border-color: none;         /* 上述4種的簡易表示法，使用時是順時針上右下左 */
+
+
+
+    border-top-width: none;     /* 上框線寬度 */
+
+    border-right-width: none;   /* 右框線寬度 */
+
+    border-bottom-width: none;  /* 下框線寬度 */
+
+    border-left-width: none;    /* 左框線寬度 */
+
+    border-width: none;         /* 上述4種的簡易表示法，使用時是順時針上右下左 */
+
+    /* border-width，有以下這幾個值
+        thin：細框線
+        medium：這是預設，中等框線
+        thick：粗框線
+        length：設定邊框寬度 */
+
+    border-top: none;           /* 上，簡易表示法 */
+
+    border-right: none;         /* 右，簡易表示法 */
+
+    border-bottom: none;        /* 下，簡易表示法 */
+
+    border-left: none;          /* 左，簡易表示法 */
+
+    border: none;               /* 簡易表示法 */
+    
+    /* 上面表示法可以用下列方式表達
+        border-style  border-color  border-width */
+    
+    border-top-left-radius: 10px;   /* 可設定左上方的邊框圓角，如果只有一個長度，表示是圓角。
+                                                              如果有兩個長度，第一個長度是水平軸半徑，
+                                                                             第二個長度是垂直軸半徑
+                                                              如果是百分比，第一個代表寬度百分比
+                                                                           第二個代表高度百分比 */
+
+    border-top-right-radius: 10px;  /* 可設定右上方的邊框圓角，同上 */
+
+    border-bottom-right-radius: 10px;   /* 可設定右下方的邊框圓角，如果只有一個長度，表示是圓角。
+                                                                如果有兩個長度，第一個長度是水平軸半徑，
+                                                                            第二個長度是垂直軸半徑
+                                                                如果是百分比，第一個代表寬度百分比
+                                                                            第二個代表高度百分比 */
+
+    border-bottom-left-radius: 10px;   /* 可設定左下方的邊框圓角，同上 */
+
+    border-radius: 10px 10xp 10px 10px; /* 上述4種的簡便表示法，但是只能將4個角設為圓角。
+                                           如果只有一個數值，代表4個角皆以此數值當作半徑。
+                                           如果有二個數值，第一個數值是套用左上角和右下角，第二個數值是套用在右上角和左下角
+                                           如果有三個數值，第一個數值是左上角，第二個是右上角和左下角，第三個是右下角
+                                           如果有四個數值，分為左上、右上、右下、左下 */
+}
+
+/* 如果有上述4種的簡易表示表
+    1.如果有一個值，這個值套用上、下、左、右邊框
+    2.當有二個值，第一個值套用上、下，第二個套用左、右
+    3.當有三個值，第一個值套用上邊，第二個值套用左、右，第三個值套用下
+    4.當有四個值，分別套用上、右、下、左 */
+
+
 
 
 /* virtualClass */
